# agentic_supplement_advisor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/agents/: chat_graph.py  nodes.py  router.py  upload_graph.py
app/models/: schemas.py
app/services/: conversation.py  document.py  tavily_client.py  vectorstore.py
app/utils/: citations.py
data/: checkpoints.db-shm  checkpoints.db-wal
data/seed_documents/: README.md
data/seed_documents/general/: calcium_and_bone_health.txt  choline_overview.txt  iodine_overview.txt  iron_supplementation.txt  magnesium_benefits.txt  omega3_fatty_acids.txt  probiotics_overview.txt  selenium_overview.txt  supplement_interactions_and_timing.txt  supplements_for_special_populations.txt  vitamin_a_overview.txt  vitamin_b12_guide.txt  vitamin_b1_thiamine_overview.txt  vitamin_b6_overview.txt  vitamin_c_essentials.txt  vitamin_d_and_k2_synergy.txt  vitamin_d_overview.txt  vitamin_e_overview.txt  vitamin_k_overview.txt  zinc_and_immunity.txt
data/seed_documents/personal/: lab_results.txt  lab_results_annual_checkup.txt  supplement_plan_current.txt
scripts/: clear_kb.py  seed_kb.py
tests/: test_documents.py  test_e2e.py  test_routing.py  test_vectorstore.py
ui/: streamlit_app.py
